--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
 	"compilerOptions": {
-		"lib": ["es5", "es6"],
+		"lib": ["es5", "es6", "esnext.asynciterable"],
 		"target": "es5",
 		"module": "commonjs",
 		"moduleResolution": "node",
